--- a/source/stylesheets/modules/_header.css.sass
+++ b/source/stylesheets/modules/_header.css.sass
@@ -4,7 +4,7 @@
   justify-content: space-between
   width: 100%
   top: 0
-  height: 60px
+  height: $header-height
   align-items: center
   z-index: 100
   background: $blue-dark
