--- a/source/stylesheets/utilities/_variables.css.scss
+++ b/source/stylesheets/utilities/_variables.css.scss
@@ -1,6 +1,8 @@
 $alt-font: "myriad-pro", Helvetica, sans-serif;
 $icon-font: "FontAwesome";
 
+$header-height: 60px;
+
 $font-size: 14px;
 $font-size-large: 16px;
 $font-color: #19282d; //same as dark
